# p2pchating

./: README.md  README_.md  客户端流程图.vsdx  总体架构图.vsdx  数据结构图.docx  服务器流程图.vsdx  概要说明书.docx
p2pchating/: 概要说明书.docx
p2pchating/build-p2pchating-Desktop-Debug/: Makefile  moc_chat.cpp  moc_login.cpp  moc_mainpage.cpp  p2pchating  ui_Chat.h  ui_login.h  ui_mainpage.h
p2pchating/build-p2pchating-Desktop-Release/: Makefile  moc_chat.cpp  moc_widget.cpp  p2pchating  ui_chat.h  ui_login.h
p2pchating/p2pchatingServer/: CMakeLists.txt  Server.cc  server
p2pchating/p2pchatingServer/include/: Data.h  Define.h  Server.h  Strecho.h  Unp.h  User.h
p2pchating/p2pchatingServer/source/: CMakeLists.txt  Strecho.cc  Unp.cc  User.cc
